scripts/_deploy/_teamplate/web-<svc>/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <svc>
  labels:
    project: <project>
    service: <svc>
    service-type: web #grpc / http / web
spec:
  selector:
    service: <svc>
  ports:
    - port: 80
      name: web-<svc>
      targetPort: 80
