scripts/_deploy/_teamplate/web-<svc>/istio-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: <svc>
spec:
  host: <svc>
  subsets:
  - labels:
      version: <version>
    name: <version>
