scripts/_deploy/_teamplate/web-<svc>/istio-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: <svc>-<version>
spec:
  hosts:
  - <svc>
  http:
  - match:
    - headers:
        x-api-version:
          exact: <version>
    name: <version>_web-<svc>
    route:
    - destination:
        host: <svc>
        subset: <version>
